--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "mongoose": "^8.16.3",
-    "next": "15.3.5",
+    "next": "^15.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
