--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.862.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "formidable": "^3.5.4",
@@ -36,6 +37,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "5.9.2"
   }
 }
