--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
+    "country-codes-list": "^2.0.0",
     "formidable": "^3.5.4",
     "jose": "^6.0.12",
     "jsonwebtoken": "^9.0.2",
